--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="crime_details_label">Details</string>
     <string name="crime_based_label">Based</string>
     <string name="date_picker_title">Based Date:</string>
+    <string name="time_picker_title">Based Time:</string>
 </resources>
