--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="ok">OK</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
@@ -15,4 +16,5 @@
     <string name="crime_based_label">Based</string>
     <string name="date_picker_title">Based Date:</string>
     <string name="time_picker_title">Based Time:</string>
+    <string name="new_based">New Based</string>
 </resources>
