Finished the entire video

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="date_picker_title">Based Date:</string>
     <string name="time_picker_title">Based Time:</string>
     <string name="new_based">New Based</string>
+    <string name="based_detail_title">based_detail</string>
+    <string name="based_list_title">Listed of Baseds</string>
+    <string name="based_count">%d baseds</string>
 </resources>
